Fixed spacing underneath say thank you button (TY-38)

--- a/css/style.scss
+++ b/css/style.scss
@@ -106,13 +106,6 @@
     top: 14px;
 }
 
-.thank-you-link-inline {
-    text-align: right;
-    padding: 8px 10px 0 0;
-    font-weight: bold;
-}
-
-
 .tile-thank-you.grid-stack-item-6[data-gs-width="1"] {
     .thank-title {
         display: none;
